<resources>
    <string name="app_name">K22411C_FirstDegree</string>
    <string name="title_app">First Degree</string>
    <string name="title_coefficient_a">Coefficient a:</string>
    <string name="title_coefficient_b">Coefficient b:</string>
    <string name="title_solution">Solution</string>
    <string name="title_Next">Next</string>
    <string name="title_Exit">Exit</string>
    <string name="title_Result">Result:</string>
    <string name="title_infinity">Infinity</string>
    <string name="title_no_solution">No Solution</string>
    <string name="title_change_language">Change language</string>
    <string name="title_vietnamese">Vietnamese</string>
    <string name="title_english">English</string>
    <string name="title_spanish">Spanish</string>
    <string name="title_french">French</string>
    <string-array name="language_array">
        <item>@string/title_vietnamese</item>
        <item>@string/title_english</item>
        <item>@string/title_spanish</item>
        <item>@string/title_french</item>
    </string-array>

</resources>